Add share button

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         </div>
         </span>
         <div id="int-container">
-            <div id='left-sidebar' class='sidebar child' style = 'order: 1;'> This is the left sidebar
-                <!-- <a href="https://pokemondb.net/pokedex/jigglypuff"><img src="https://img.pokemondb.net/sprites/ruby-sapphire/normal/jigglypuff.png" alt="Jigglypuff"></a>
-                -->
+            <div id='left-sidebar' class='sidebar child' style = 'order: 1;'> 
+                <button id="share-button" class='normal-button'>Share Card</button>
+                <button id="about-button" class='normal-button'>About</button>
+                <a href="https://pokemondb.net/pokedex/jigglypuff"><img src="https://img.pokemondb.net/sprites/ruby-sapphire/normal/jigglypuff.png" alt="Jigglypuff"></a>
             </div>
             <div id ='card-container' class="child" style='order: 2;'>
                 <img id = 'cardImg'  class='loading' src='images/loading.gif'>
