--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="int-container">
             <div id='left-sidebar' class='sidebar child' style = 'order: 1;'> 
                 <button id="share-button" class='normal-button'>Share Card</button>
-                <button id="about-button" class='normal-button'>About</button>
+                <button id="about-button" class='normal-button' href = 'about'>About</button>
                 <a href="https://pokemondb.net/pokedex/jigglypuff"><img src="https://img.pokemondb.net/sprites/ruby-sapphire/normal/jigglypuff.png" alt="Jigglypuff"></a>
             </div>
             <div id ='card-container' class="child" style='order: 2;'>
