--- a/about/index.html
+++ b/about/index.html
@@ -26,6 +26,8 @@
     </p>
     <iframe src="https://ghbtns.com/github-btn.html?user=twbs&repo=bootstrap&type=star&size=large&text=false" frameborder="0" scrolling="0" width="40" height="30" title="GitHub"></iframe>
     <br>
+    <p><a href="https://app.netlify.com/sites/card-ify/deploys"><img src="https://api.netlify.com/api/v1/badges/3381429a-31a7-4b2a-9b50-1b94340d063c/deploy-status" alt="Netlify Status" style='width:150px; '></a></p>
+    <br>
     <h1>Sources</h1>
     <ul style='font-family:"Trip-Sans"; '>
         <li><a style='color:#1DB954;' href='https://fontshub.pro/font/trip-sans-download'>Trip Sans Font</a></li>
