update footer link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <div id="footer">
-            About
+            <a href='/about' style='color:#1DB954;text-decoration: none;'>About</a>
         </div>
     </div>
     <canvas id = 'card' style="font-family: PokemonEmerald; color: #636363; "></canvas>
