--- a/about/index.html
+++ b/about/index.html
@@ -36,7 +36,7 @@
         <li><a style='color:#1DB954;' href='https://pokemondb.net/sprites/jigglypuff'>Jigglypuff Sprite (Gen 3)</a></li>
         <li><a style='color:#1DB954;' href='https://pokemondb.net/sprites/jigglypuff'>Shiny Rayquaza Sprite (Gen 3)</a></li>
         <li><a style='color:#1DB954;' href='https://pokemondb.net/sprites/celebi'>Celebi Sprite (Gen 3)</a></li>
-        <li>Loading sign from loading.io</li>
+        <li style='font-family:"Trip-Sans"; '>Loading sign from loading.io</li>
     </ul>
     <div id='footer-abt'>
         <a href="https://pokemondb.net/pokedex/rayquaza"><img src="https://img.pokemondb.net/sprites/ruby-sapphire/shiny/rayquaza.png" alt="Rayquaza" id='ray'></a>
