original sprite preview path error fixed

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <img id = 'cardImg'  class='loading' src='images/loading.gif'>
             </div>
             <div id='right-sidebar' class='sidebar child' style = 'order: 3;'>
-                <img src='images/sprites/images/trainer_1' id='sprite-preview'>
+                <img src='images/sprites/images/trainer_1.png' id='sprite-preview'>
                 <button id = 'dropdown-but' class='normal-button' onclick='document.getElementById("sprite-selector").style.display="block";'>Change Character</button>
             </div>
         </div>
