Meta preview tags
+ search console index tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <meta name="google-site-verification" content="TIPhYGYGO3tdQBu4w_BLR2Gk1XNJRH9Z5WjbplPThXw" />
+
+     <meta property="og:type" content="website">
+    <meta property="og:title" content="Cardify" />
+    <meta property="og:description" content="Generate a card with Spotify Stats in the style of a Generation3 Pokemon Game! " />
+    <meta property="og:url" content="https://tinyphone.netlify.app/" />
+    <meta property="og:image" content="/images/card-front.png" /> 
+	<meta name="theme-color" content="#1DB954">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="description" content="Generate a card with Spotify Stats in the style of a Generation3 Pokemon Game! ">
 </head>
 
 <body>
