--- a/about/index.html
+++ b/about/index.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NG5RLRSVTK"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-NG5RLRSVTK');
+    </script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Cardify</title>
