SEO/Speed optimization

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 
 <head>
     <!-- Google tag (gtag.js) -->
@@ -13,11 +13,10 @@
     </script>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cardify</title>
     <link href="fonts/fonts.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <meta name="google-site-verification" content="TIPhYGYGO3tdQBu4w_BLR2Gk1XNJRH9Z5WjbplPThXw" />
 
@@ -49,7 +48,7 @@
                 <button id="share-button" class='normal-button'>Share Card</button>
                 <button id="sign-out-button" class='normal-button'>Sign Out</button>
                 <button id="about-button" class='normal-button' href = 'about'>About</button>
-                <a><img src="https://img.pokemondb.net/sprites/ruby-sapphire/normal/jigglypuff.png" alt="Jigglypuff"></a>
+                <img src="https://img.pokemondb.net/sprites/ruby-sapphire/normal/jigglypuff.png" alt="Jigglypuff">
             </div>
             <div id ='card-container' class="child" style='order: 2;'>
                 <img id = 'cardImg'  class='loading' src='images/loading.gif'>
