--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 
 <head>
     <!-- Google tag (gtag.js) -->
@@ -17,7 +17,6 @@
     <title>Cardify</title>
     <link href="../fonts/fonts.css" rel="stylesheet">
     <link href="../style.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
     <meta property="og:type" content="website">
