Update embed preview

--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="Cardify" />
     <meta property="og:description" content="Generate a card with Spotify Stats in the style of a Generation3 Pokemon Game! " />
     <meta property="og:url" content="https://tinyphone.netlify.app/" />
-    <meta property="og:image" content="/images/card-front.png" /> 
+    <meta property="og:image" content="/images/blank-card-front.png" /> 
 	<meta name="theme-color" content="#1DB954">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
