--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
      <meta property="og:type" content="website">
     <meta property="og:title" content="Cardify" />
-    <meta property="og:description" content="Generate a card with Spotify Stats in the style of a Generation3 Pokemon Game! " />
+    <meta property="og:description" content="Generate a card with Spotify Stats in the style of a Generation 3 Pokemon Game! " />
     <meta property="og:url" content="https://tinyphone.netlify.app/" />
-    <meta property="og:image" content="/images/card-front.png" /> 
+    <meta property="og:image" content="/images/blank-card-front.png" /> 
 	<meta name="theme-color" content="#1DB954">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="description" content="Generate a card with Spotify Stats in the style of a Generation3 Pokemon Game! ">
+    <meta name="description" content="Generate a card with Spotify Stats in the style of a Generation 3 Pokemon Game! ">
 </head>
 
 <body>
