Fix jigglypuff sprite size

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <button id="share-button" class='normal-button'>Share Card</button>
                 <button id="sign-out-button" class='normal-button'>Sign Out</button>
                 <button id="about-button" class='normal-button' href = 'about'>About</button>
-                <img src="https://img.pokemondb.net/sprites/ruby-sapphire/normal/jigglypuff.png" alt="Jigglypuff">
+                <a href="https://pokemondb.net/pokedex/jigglypuff"><img src="https://img.pokemondb.net/sprites/ruby-sapphire/normal/jigglypuff.png" alt="Jigglypuff"></a>
             </div>
             <div id ='card-container' class="child" style='order: 2;'>
                 <img id = 'cardImg'  class='loading' src='images/loading.gif'>
