--- a/about/index.html
+++ b/about/index.html
@@ -42,7 +42,8 @@
     <br>
     <p>
     This website does not collect or save any data from your spotify account, all data is hosted locally on the client side.<br><br>
-    All of the spaghetti code that this website runs on is avalible on Github. <br>
+    All of the code that this website runs on is avalible on Github. <br>
+    Popularity is calculated as an average of 50 top tracks of the last 6 months for a user. 
     </p>
     <iframe src="https://ghbtns.com/github-btn.html?user=twbs&repo=bootstrap&type=star&size=large&text=false" frameborder="0" scrolling="0" width="40" height="30" title="GitHub"></iframe>
     <br>
