--- a/about/index.html
+++ b/about/index.html
@@ -41,7 +41,7 @@
     </p>
     <br>
     <p>
-    This website does not collect or save any data from your spotify account, all data is hosted locally on the client side.<br><br>
+    This website does not collect or save any data from your spotify account, all data is hosted locally on the client side.<br>
     All of the code that this website runs on is avalible on Github. <br>
     Popularity is calculated as an average of 50 top tracks of the last 6 months for a user. 
     </p>
